# RabbitTClust

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MST.cpp  MST.h  MST_IO.cpp  MST_IO.h  Makefile  README.md  SketchInfo.cpp  SketchInfo.h  UnionFind.h  experiment.md  install.sh  main.cpp  parameter.cpp  parameter.h  test.cpp
benchmark/: README.md  generateList.sh
benchmark/analysis/: README_genus_merge_analysis.md  analyze_genus_pair_clusters.py  analyze_genus_species_relationships.py  newick_analyzer.py  plot_genus_pair_visualization.py
benchmark/download/: README.md  download_genbank.sh
benchmark/evaluation/: Makefile  README.md  compile.sh  getF1.py  getNMI.py  getResult.py
benchmark/evaluation/groundTruth/: simulated_10_groundTruth  simulated_25_groundTruth  simulation_10_200_500_10M_groundTruth  viralList.genera.map  viralList.species.map  viral_S9_groundTruth  viral_groundTruth
benchmark/evaluation/src/: analysisPurity.cpp  calF1.cpp  calGenome.cpp  calLabel.cpp  calNMI.cpp  calPurity.cpp  calResult.cpp  calResult1.cpp  calResult2.cpp  calViral.cpp  checkTaxonomyStatus.cpp  getRepresentativeList.cpp  groundTruth.cpp  groundTruth.h  mapGenome.cpp  precalLabel.cpp
benchmark/simulate/: Makefile  README.md
benchmark/simulate/src/: create_containment_bacteria.cpp  simulate_longSequence.cpp
benchmark/simulateData/: README.md  compile.sh
benchmark/simulateData/src/: createBacteria.cpp  redundancyRemove.cpp  simulate.cpp
src/: MST.cpp  MST.h  MST_IO.cpp  MST_IO.h  Makefile  SketchInfo.cpp  SketchInfo.h  Sketch_IO.cpp  Sketch_IO.h  UnionFind.h  cluster_postprocess.cpp  cluster_postprocess.h  common.hpp  dbscan.cpp  dbscan.h  demo.cpp  greedy.cpp  greedy.h  leiden.cpp  leiden.h  main.cpp  mst_state.cpp  mst_state.h  parameter.cpp  parameter.h  sub_command.cpp  sub_command.h
version_history/: history.md  v.2.0.0.md  v.2.1.0.md  v.2.2.0.md
